--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ footer {
 
 /* LARGER SCREENS: */
 
-@media screen and (min-width: 900px) {
+/* @media screen and (min-width: 900px) {
 html {
     display: flex;
     justify-content: center;
@@ -221,9 +221,9 @@ html {
     width: 70%;
 }
 
-}
+} */
 
-@media screen and (min-width: 1200px) {
+/* @media screen and (min-width: 1200px) {
     html {
         display: flex;
         justify-content: center;
@@ -234,9 +234,9 @@ html {
         width: 50%;
     }
     
-    }
+    } */
 
-    @media screen and (max-device-width: 500px) and (orientation : landscape){
+    @media screen and (orientation: landscape){
         html {
             display: flex;
             justify-content: center;
